--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -19,7 +19,7 @@
                     <p>I was born in Moscow and lived in Russia until I was about 16.
                       I moved to the US and went to Rutgers University for my undergraduate degree in economics.
                       I then worked for the IMF where I focused on economic assistance in West Africa, especially for countries affected by the Ebola epidemic. I later pursued my MBA at Harvard and founded a <a href="https://www.finfox.co/">startup</a> that helps businesses create financial projections with data science.</p>
-                    <p>Right before my first semester at Harvard, I went a road trip where I drove for 18 hours to see two buildings:
+                    <p>Right before my first semester at Harvard, I went on a road trip where I drove for 18 hours to see two buildings:
                       Philip Johnson's <a href="https://en.wikipedia.org/wiki/Glass_House" target="_blank">Glass House</a>
                       and Frank Lloyd Wright's <a href="https://en.wikipedia.org/wiki/Fallingwater" target="_blank">Fallingwater</a>.
                       The experience of seeing these iconic buildings made me realize how much I love architecture, real estate, and creating unique experiences with physical spaces.</p>
