--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -6,7 +6,7 @@
         <div class="row">
             <div class="col-sm-12">
                 <div class="page-title">
-                    <h1 class="heading">Hi, I'm Dmitry Zhdankin.<br>My friends just call me <b>Dima</b>.</h1>
+                    <h1 class="heading">Hi, I'm Dmitry Zhdankin.<br>My friends call me <b>Dima</b>.</h1>
                 </div>
             </div>
         </div>
