fixed hamburger on mobile

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -11,6 +11,9 @@
         <link rel="icon" type="image/png" href="../static/images/favicon.png" />
         <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700" rel="stylesheet">
         <link href="../static/css/bootstrap.css" rel="stylesheet" type="text/css"/>
+        <link href="../static/css/ionicons.css" rel="stylesheet" type="text/css"/>
+        <link href="../static/css/cubeportfolio.css" rel="stylesheet" type="text/css"/>
+        <link href="../static/css/owl.carousel.css" rel="stylesheet" type="text/css"/>
         <link href="../static/style.css" rel="stylesheet" type="text/css"/>
 
         <!-- Document Title -->
@@ -33,10 +36,10 @@
                         <span id="menu-trigger"><span></span></span>
                         <nav id="main-menu">
                             <ul>
-                                <li><a href="https://medium.com/@dmitryzhdankin" target="_blank"><div>MEDIUM</div></a>
-                                <li><a href="https://twitter.com/dmitryzhdankin" target="_blank"><div>TWITTER</div></a>
-                                <li><a href="https://t.me/dmitryzhdankin" target="_blank"><div>TELEGRAM</div></a>
-                                <li><a href="mailto:dmitry.zhdankin@gmail.com"><div>EMAIL</div></a>
+                                <li><a href="https://medium.com/@dmitryzhdankin" target="_blank"><div>MEDIUM</div></a></li>
+                                <li><a href="https://twitter.com/dmitryzhdankin" target="_blank"><div>TWITTER</div></a></li>
+                                <li><a href="https://t.me/dmitryzhdankin" target="_blank"><div>TELEGRAM</div></a></li>
+                                <li><a href="mailto:dmitry.zhdankin@gmail.com"><div>EMAIL</div></a></li>
                             </ul>
                         </nav>
                     </div>
@@ -73,6 +76,9 @@
 
         <!-- Scripts -->
         <script src="../static/js/jquery-1.12.4.min.js"></script>
+        <script src="../static/js/superfish.js"></script>
+        <script src="../static/js/cubeportfolio.min.js"></script>
+        <script src="../static/js/owl.carousel.min.js"></script>
         <script src="../static/js/main.js"></script>
         <!-- Scripts Ends -->
     </body>
