--- a/app/templates/distance-kendall.html
+++ b/app/templates/distance-kendall.html
@@ -51,7 +51,7 @@ type="text/javascript"></script>
 
 
       // Coordinates to center the map
-      var myLatlng = new google.maps.LatLng(25.6494143, -80.3398053);
+      var myLatlng = new google.maps.LatLng(33.481903, -111.92616);
 
       // Other options for the map, pretty much selfexplanatory
       var mapOptions = {
