removed css reference

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -23,7 +23,7 @@
                       Philip Johnson's <a href="https://en.wikipedia.org/wiki/Glass_House" target="_blank">Glass House</a>
                       and Frank Lloyd Wright's <a href="https://en.wikipedia.org/wiki/Fallingwater" target="_blank">Fallingwater</a>.
                       The experience of seeing these iconic buildings made me realize how much I love architecture, real estate, and creating unique experiences with physical spaces.</p>
-                    <p>I currently live in Los Angeles where I work at intersection of real estate acquistions & data science at <a href="https://techcrunch.com/2018/03/20/travis-kalanick-is-already-back-to-running-a-company-with-a-150m-investment/" target="_blank">CSS</a></p>.
+                    <p>I currently live in Los Angeles where I work at intersection of real estate acquistions & data science.</p>
                     <p>Feel free to follow me on <a href="https://medium.com/@dmitryzhdankin" target="_blank">Medium</a> or <a href="https://twitter.com/dmitryzhdankin" target="_blank">Twitter</a> if you want to stay in touch.</p>
             </div>
         </div>
